# IA_DM

./: .env.example  .gitignore  README.md  app.py  dungeon_map.py  game_engine.py  llm_client.py  llm_metrics(1).csv  llm_metrics.csv  prompts.py  pyproject.toml
ai_dm/: __init__.py
ai_dm/domain/: __init__.py  character.py  dice.py  dungeon.py  events.py  monster.py
ai_dm/engine/: __init__.py  combat.py
ai_dm/eval/: __init__.py  benchmark_memory.py
ai_dm/llm/: __init__.py  client.py  guardrails.py  memory.py  metrics.py  prompts.py
ai_dm/persistence/: __init__.py  save.py
ai_dm/ui/: __init__.py  combat_view.py  styles.py
docs/: PLANO_V1.md
tests/: conftest.py  test_character.py  test_combat.py  test_dice.py  test_dungeon.py  test_guardrails.py  test_memory_stream.py  test_persistence.py
tests/eval/: README.md  scenarios.yaml
