[project]
name = "ai-dm"
version = "1.0.0"
description = "Solo D&D dungeon crawl with an LLM acting as Dungeon Master."
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.33.0",
    "openai>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ai_dm*"]
exclude = ["saves*", "tests*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["ai_dm"]
omit = ["ai_dm/ui/*", "app.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 110
target-version = "py311"
exclude = [".venv", "saves", "docs"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # line length: handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
